--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
           <div class="my-form d-flex">
             <img src="./assets/hero/person.svg" alt="person" />
-            <input id="input1" type="text" placeholder="Manasraj" />
+            <input id="input1" type="text" placeholder="Quayem" />
           </div>
 
           <div class="my-form d-flex">
@@ -822,8 +822,8 @@
       integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
       crossorigin="anonymous"
     ></script>
-    <pre class="manas">
-   By-> <b>Manasraj</b>
+    <pre class="Quayem">
+   By-> <b>Quayem</b>
     </pre>
     <!-- ------------------------ -->
   </body>
